--- a/app/stylesheets/sections/_section5.scss
+++ b/app/stylesheets/sections/_section5.scss
@@ -1,4 +1,6 @@
 .section5 {
+  padding-bottom: 30px;
+
   background: url('../images/3-background.jpg') no-repeat center;
   background-size: cover;
   color: #fff;
