--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -83,12 +83,13 @@ body
                 span.checkbox__yes.checkbox-active
                   | да
             .checkbox-wrapper__text
-              .checkbox-wrapper__text-1
+              span.checkbox-wrapper__text-1
                 | Даю согласие на
                 =' '
                 a(href="#")
                   | Обработку персональных данных
-              .checkbox-wrapper__text-2
+                  = ' '
+              span.checkbox-wrapper__text-2
                 | Ваши данные не будут переданы третьим лицам
           a(href="#").btn.section1__form-btn
             | Звоните
@@ -108,40 +109,51 @@ body
 
     .section.section2
       .container
-        .section2__title-wrapper
-          .section__title.section2__title
-            | процесс получения займа
-          .section2__text
-            | Три простых шага к получению нужной Вам денежной суммы
-          a(href="#").btn.section2__form-btn
-            | Получить займ
-        .section2__item.section2__item-3
-          .section2__item-icon.section2__item-icon-3
-          .section2__item-text-wrapper
-            .section2__item-digit
-              | 03
-            .section2__item-text
-              | Приезжайте
-              br.section2__item-text
-              | за своими деньгами
-        .section2__item.section2__item-1
-          .section2__item-icon.section2__item-icon-1
-          .section2__item-text-wrapper
-            .section2__item-digit
-              | 01
-            .section2__item-text
-              | Позвоните или оставьте
-              br.section2__item-text
-              | номер телефона
-        .section2__item.section2__item-2
-          .section2__item-icon.section2__item-icon-2
-          .section2__item-text-wrapper
-            .section2__item-digit
-              | 02
-            .section2__item-text
-              | Узнайте решение
-              br.section2__item-text
-              | в течение 30 минут
+        .section2__container-wrapper
+          .section2__title-wrapper
+            .section__title.section2__title
+              | процесс получения займа
+            .section2__text
+              | Три простых шага к получению нужной Вам денежной суммы
+            a(href="#").btn.section2__form-btn
+              | Получить займ
+          .section2__item.section2__item-3
+            .section2__item-icon.section2__item-icon-3
+            .section2__item-text-wrapper
+              .section2__item-digit
+                | 03
+              .section2__item-text
+                | Приезжайте
+                br.section2__item-text
+                | за своими деньгами
+          .section2__items-wrapper
+            .section2__item.section2__item-1
+              .section2__item-icon.section2__item-icon-1
+              .section2__item-text-wrapper
+                .section2__item-digit
+                  | 01
+                .section2__item-text
+                  | Позвоните или оставьте
+                  br.section2__item-text
+                  | номер телефона
+            .section2__item.section2__item-2
+              .section2__item-icon.section2__item-icon-2
+              .section2__item-text-wrapper
+                .section2__item-digit
+                  | 02
+                .section2__item-text
+                  | Узнайте решение
+                  br.section2__item-text
+                  | в течение 30 минут
+            .section2__item.section2__item-3.section2__item-3-mob
+              .section2__item-icon.section2__item-icon-3
+                .section2__item-text-wrapper.section2__item-text-wrapper-mob
+                  .section2__item-digit
+                    | 03
+                  .section2__item-text
+                    | Приезжайте
+                    br.section2__item-text
+                    | за своими деньгами
 
     .section.section3
       .container
@@ -175,31 +187,31 @@ body
           .section3__min-slider
             .min-slider__slide-1
               .min-slider__icon.min-slider__icon-1
-                img(src="../images/features-icon1.png")
+                img(src="../images/features-icon1.png").min-slider__slide-foto-1
               .min-slider__text
                 | Не требуем генеральной доверенности и договор купли-продажи
             .min-slider__slide-2
               .min-slider__icon.min-slider__icon-2
-                img(src="../images/features-icon2.png")
+                img(src="../images/features-icon2.png").min-slider__slide-foto-2
               .min-slider__text
                 | Пересчет процентов
                 br.min-slider__text
                 | за пользование займом по дням
             .min-slider__slide-3
               .min-slider__icon.min-slider__icon-3
-                img(src="../images/features-icon3.png")
+                img(src="../images/features-icon3.png").min-slider__slide-foto-3
               .min-slider__text
                 | При заключении договора,
                 br.min-slider__text
                 | деньги наличными сразу
             .min-slider__slide-4
               .min-slider__icon.min-slider__icon-4
-                img(src="../images/features-icon3.png")
+                img(src="../images/features-icon3.png").min-slider__slide-foto-4
               .min-slider__text
                 | Высокая лояльность к клиентам
             .min-slider__slide-5
               .min-slider__icon.min-slider__icon-5
-                img(src="../images/features-icon3.png")
+                img(src="../images/features-icon3.png").min-slider__slide-foto-5
               .min-slider__text
                 | Работаем официально, состоим
                 br.min-slider__text
@@ -216,8 +228,8 @@ body
           | ставки, условия
         .section4__text
           | Меньше сроки - меньше процент!
-        .section4__seven
         .section4__percent
+          .section4__seven
           .section4__percent-text-1
             | Низкий процент ставок!
           .section4__percent-text-2
