--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -49,7 +49,8 @@
 
 .section1__form-text {
   display: block;
-  width: 425px;
+  max-width: 425px;
+  width: 100%;
   height: 35px;
   margin-bottom: 25px;
   padding-left: 17px;
@@ -68,6 +69,11 @@
 
 .section1__form-tel {
   margin-bottom: 37px;
+}
+
+.checkbox-wrapper__text {
+  max-width: 296px;
+  width: 100%;
 }
 
 .section1__form-checkbox {
@@ -195,12 +201,12 @@ span.checkbox__yes {
 
   .section__title {
   position: relative;
-  margin-bottom: 75px;
+  margin-bottom: 55px;
 
   &::after {
     content: '';
     position: absolute;
-    bottom: -44px;
+    bottom: -34px;
     display: block;
     width: 91px;
     height: 7px;
@@ -213,165 +219,145 @@ span.checkbox__yes {
 
 
   .section1__title1 {
-    font-family: Intro;
-    font-size: 50px;
-    margin-bottom: 17px;
+    font-size: 46px;
+    margin-bottom: 10px;
 
-    color: #fff;
   }
 
   .section1__title2 {
     font-family: Intro;
-    font-size: 28px;
+    font-size: 26px;
     color: #fff;
   }
 
   .section1__text {
     max-width: 557px;
-    margin-bottom: 33px;
+    margin-bottom: 25px;
 
     font-family: Roboto;
-    font-size: 16px;
-    line-height: 1.67;
-    font-weight: normal;
+    font-size: 15px;
   }
 
   .section1__form-text {
-    display: block;
-    width: 405px;
+    max-width: 405px;
+    width: 100%;
     height: 30px;
-    margin-bottom: 21px;
+    margin-bottom: 17px;
     padding-left: 14px;
-
-    color: #ffffff;
-
-    border-radius: 5px;
-    background: none;
-    border: solid 1px #ffffff;
   }
 
   .section1__form-tel {
-    margin-bottom: 37px;
-  }
-
-  .section1__form-checkbox {
-    display: none;
+    margin-bottom: 25px;
   }
 
   .checkbox {
-    position: relative;
-    top: 3px;
+    top: 7px;
 
-    width: 43px;
-    height: 20px;
+    width: 38px;
+    height: 16px;
 
-    background: #ffffff;
-
-    border-radius: 9.5px;
-    cursor: pointer;
   }
 
   .checkbox__circle {
     position: absolute;
     left: 0;
-    z-index: 20;
 
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    border-radius: 9.5px;
-    background-color: #accc3d;
+    width: 16px;
+    height: 16px;
+
   }
 
   .checkbox span {
-    color: #141414;
     font-size: 12px;
-    line-height: 1.5;
   }
 
   span.checkbox__yes {
-    position: absolute;
-    z-index: 10;
-
-    left: 5px;
-    display: none;
+    top: -3px;
+    left: 4px;
   }
 
   .checkbox-wrapper {
-    display: block;
-    margin-bottom: 36px;
+    margin-bottom: 32px;
+  }
 
+  .checkbox-wrapper__text {
+    font-size: 12px;
+  }
+
+  .section1__form-btn {
+    margin-bottom: 60px;
+  }
+
+  .section1__features-item {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1110px) {
+  .section1__features-item {
+    margin-right: 4%;
+  }
+}
+
+@media (max-width: 960px) {
+  .section1__features-item {
+    margin-bottom: 18px;
+    margin-right: 2%;
+  }
+}
+
+@media (max-width: 500px) {
+  .section__title {
+    margin-bottom: 38px;
+
+  &::after {
+    bottom: -24px;
+    }
+  }
+
+  .section1__title1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+
+  }
+
+  .section1__title2 {
+    font-family: Intro;
+    font-size: 22px;
+    color: #fff;
+  }
+
+  .section1__text {
+
+  }
+}
+
+@media (max-width: 500px) {
+  .checkbox-wrapper {
+    display: block;
+
+    position: relative;
+    max-width: 450px;
+    width: 100%;
+    padding-left: 60px;
+    text-align: left;
     vertical-align: top;
   }
 
   .checkbox-wrapper__checkbox {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 19px;
+    position: absolute;
+    left: 0;
   }
 
-  .checkbox-wrapper__text {
-    display: inline-block;
-
-    vertical-align: top;
-    font-family: Roboto;
-    font-size: 12px;
-    line-height: 2;
-    text-align: left;
-    color: #ffffff;
+  .checkbox {
+    position: absolute;
+    left: 0;
+    //top: 20px;
   }
+}
 
-  .checkbox-wrapper__text-1 a {
-    color: #accc3d;
-  }
+@media (max-width: 388px) {
+  .checkbox-wrapper__text-2 {
 
-  .section1__form-btn {
-    margin-bottom: 130px;
-  }
-
-  .section1__features-item {
-    display: inline-block;
-
-    max-width: 275px;
-    width: 100%;
-    margin-right: 10.5%;
-
-    font-size: 14px;
-    line-height: 1.29;
-  }
-
-  .section1__features-item:last-child {
-    margin-right: 0;
-  }
-
-  .section1__features-item-icon {
-    display: table-cell;
-    vertical-align: middle;
-
-    width: 45px;
-    height: 49px;
-    margin-right: 25px;
-  }
-
-  .section1__features-item-icon-1 {
-    background: url('../images/money.png') no-repeat center;
-    background-size: contain;
-  }
-
-  .section1__features-item-icon-2 {
-    background: url('../images/percent.png') no-repeat center;
-    background-size: contain;
-  }
-
-  .section1__features-item-icon-3 {
-    background: url('../images/document.png') no-repeat center;
-    background-size: contain;
-  }
-
-  .section1__features-item-text {
-    display: table-cell;
-    vertical-align: middle;
-    max-width: 220px;
-    padding-left: 20px;
   }
 }
