--- a/app/stylesheets/sections/_section4.scss
+++ b/app/stylesheets/sections/_section4.scss
@@ -22,8 +22,8 @@
 
 .section4__seven {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -240px;
+  right: -340px;
   z-index: 20;
 
 
@@ -92,4 +92,199 @@
 
 .section4__passport-icon-4 {
    background: url('../images/passport4.png') no-repeat center;
+}
+
+@media (max-width: 1368px) {
+  .section__title {
+    font-size: 36px;
+  }
+
+  .section4__text {
+    margin-bottom: 50px;
+  }
+
+  .section4__title {
+    margin-bottom: 45px;
+
+    &::after {
+      bottom: -28px;
+    }
+  }
+
+  .section4__seven {
+    position: absolute;
+    top: -170px;
+    right: -280px;
+    z-index: 20;
+
+
+    width: 400px;
+    height: 285px;
+  }
+
+  .section4__percent {
+    max-width: 68.4%;
+    width: 100%;
+    min-height: 190px;
+    padding-top: 55px;
+    padding-left: 51px;
+    margin-bottom: 30px;
+
+
+    font-size: 26px;
+    line-height: 1.23;
+
+
+    border: solid 8px #accc3d;
+  }
+
+  .section__passport-item {
+    max-width: 230px;
+    min-height: 210px;
+    margin-right: 4.15%;
+
+    font-size: 16px;
+    line-height: 1.5;
+    color: #030206;
+  }
+
+  .section__passport-item:last-child {
+    margin-right: 0;
+  }
+
+  .section__passport-icon {
+    min-height: 123px;
+    width: 150px;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 1122px) {
+  .section__passport-item {
+    margin-right: 3%;
+  }
+}
+
+@media (max-width: 1085px) {
+  .section__passport-item {
+    margin-right: 2%;
+  }
+
+  .section__passport-item {
+    max-width: 211px;
+  }
+
+  .section__passport-icon {
+    min-height: 103px;
+    background-size: contain;
+  }
+
+  .section__passport-text {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 1072px) {
+  .section4__percent {
+    width: 100%;
+    max-width: 68.4%;
+    padding-left: 31px;
+  }
+
+  .section4__percent-text-1 {
+    font-size: 23px;
+  }
+
+  .section4__percent-text-2 {
+    font-size: 23px;
+  }
+}
+
+@media (max-width: 834px) {
+  .section4__seven {
+    left: -45px;
+    top: 200px;
+  }
+
+
+  .section4__percent {
+    width: 100%;
+    max-width: 78.4%;
+    margin-bottom: 350px;
+  }
+
+  .section__passport-icon {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 687px) {
+   .section4__percent {
+    width: 100%;
+    max-width: 100%;
+     padding-top: 40px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 467px) {
+  .section__passport-wrapper {
+    max-width: 100%;
+    width: 100%
+  }
+
+  .section__passport-item {
+    display: block;
+    width: 211px;
+    margin: 0 auto;
+  }
+
+  .section__passport-item:last-child {
+    margin-right: auto;
+  }
+
+  .section__passport-icon {
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+
+  .section__passport-text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 427px) {
+  .section4__percent-text-1 {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 423px) {
+  .section4__seven {
+    top: 210px;
+  }
+
+  .section4__percent-text-1 {
+    font-size: 22px;
+  }
+
+  .section4__percent-text-2 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 423px) {
+
+  .section4__percent {
+    margin-bottom: 320px;
+  }
+
+  .section4__seven {
+    top: 210px;
+    left: -20px;
+
+    width: 300px;
+    height: 235px;
+  }
 }
