--- a/app/stylesheets/sections/_section6.scss
+++ b/app/stylesheets/sections/_section6.scss
@@ -23,7 +23,7 @@
   display: inline-block;
   vertical-align: top;
   width: 486px;
-  height: 375px;
+  min-height: 375px;
   padding-left: 114px;
   padding-top: 31px;
   margin-bottom: 61px;
@@ -92,4 +92,112 @@
 .section6__content-block-icon-2 {
   background: url('../images/icon-car.png') no-repeat center;
   background-size: contain;
+}
+
+@media (max-width: 1368px) {
+  .section6__title {
+    margin-bottom: 20px;
+
+    &::after {
+      bottom: -13px;
+  }
+}
+
+.section6__text {
+    margin-bottom: 20px;
+  }
+
+  .section6__content-block {
+    max-width:  418px;
+    width: 100%;
+    min-height: 265px;
+
+    padding-top: 20px;
+    padding-left: 70px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  .section6__content-block-title {
+    margin-bottom: 20px;
+  }
+
+  .section6__content-block li {
+    margin-bottom: 10px;
+    line-height: 1.3;
+  }
+
+  .section6__content-block li::before {
+    top: 6px;
+  }
+
+  .section6__content-block-icon {
+    left: -49px;
+    width: 83px;
+    height: 83px;
+  }
+}
+
+@media (max-width: 1090px) {
+  .section6__content-block-1 {
+    margin-right: 7.6%;
+  }
+}
+
+@media (max-width: 1015px) {
+  .section6__content-block-1 {
+    margin-right: 5.6%;
+  }
+}
+
+@media (max-width: 995px) {
+  .section6__content {
+    padding-left: 20px;
+  }
+
+  .section6__content-block-1 {
+    margin-right: 1%;
+  }
+
+  .section6__content-block-icon {
+    display: none;
+  }
+}
+
+@media (max-width: 904px) {
+
+  .section6__text {
+    margin-bottom: 30px;
+  }
+
+  .section6__content-block {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  .section6__content {
+    padding-left: 0;
+  }
+
+  .section6__content-block-icon {
+    display: block;
+  }
+}
+
+@media (max-width: 517px) {
+  .section6__content-block-icon {
+    display: none;
+  }
+}
+
+
+@media (max-width: 464px) {
+  .section6__content-block {
+    max-width: 100%;
+    width: 100%;
+    padding-bottom: 20px;
+    padding-left: 45px;
+  }
 }
