--- a/app/stylesheets/tools/_jquery.fullPage.scss
+++ b/app/stylesheets/tools/_jquery.fullPage.scss
@@ -179,7 +179,6 @@ html.fp-enabled,
     background: #6f6f6f;
     left: 50%;
     top: 50%;
-    //margin: -2px 0 0 -2px;
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -o-transition: all 0.1s ease-in-out;
@@ -228,4 +227,40 @@ html.fp-enabled,
 .fp-responsive .fp-auto-height-responsive .fp-slide,
 .fp-responsive .fp-auto-height-responsive .fp-tableCell {
     height: auto !important;
+}
+
+@media (max-width: 1300px) {
+  #fp-nav.left {
+    left: 0;
+  }
+
+  #fp-nav ul li,
+  .fp-slidesNav ul li {
+    margin: 12px;
+  }
+
+  #fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    height: 7px;
+    width: 7px;
+  }
+
+  #fp-nav ul li:hover a span,
+  .fp-slidesNav ul li:hover a span{
+    width: 9px;
+    height: 9px;
+    margin: -1px 0px 0px -1px;
+}
+
+  #fp-nav ul li a.active span,
+  .fp-slidesNav ul li a.active span,
+  #fp-nav ul li:hover a.active span,
+  .fp-slidesNav ul li:hover a.active span{
+    height: 12px;
+    width: 12px;
+    margin: -3px 0 0 -3px;
+    border-radius: 100%;
+    background-color: #accc3d;
+ }
+
 }
