--- a/app/stylesheets/tools/_settings.scss
+++ b/app/stylesheets/tools/_settings.scss
@@ -45,3 +45,22 @@ a {
 .error {
   border: solid 1px #d24a43;
 }
+
+
+@media (max-width: 1230px) {
+  .container {
+    padding-left: 40px;
+  }
+}
+
+@media (max-width: 960px) {
+  .container {
+    padding: 0 18px;
+  }
+}
+
+@media (max-width: 560px) {
+  .container {
+    padding: 0 12px;
+  }
+}
