--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -164,54 +164,54 @@ body
         .section3__big-slider
           .big-slider__slide.big-slider__slide-1
             .big-slider__slide-circle
-            img(src="../images/features-slide1.png").big-slider__slide-foto-1
+            img(src="./images/features-slide1.png").big-slider__slide-foto-1
 
           .big-slider__slide.big-slider__slide-2
             .big-slider__slide-circle
-            img(src="../images/features-slide2.png").big-slider__slide-foto-2
+            img(src="./images/features-slide2.png").big-slider__slide-foto-2
 
           .big-slider__slide.big-slider__slide-3
             .big-slider__slide-circle
-            img(src="../images/features-slide3.png").big-slider__slide-foto-3
+            img(src="./images/features-slide3.png").big-slider__slide-foto-3
 
           .big-slider__slide.big-slider__slide-4
             .big-slider__slide-circle
-            img(src="../images/features-slide4.png").big-slider__slide-foto-4
+            img(src="./images/features-slide4.png").big-slider__slide-foto-4
 
             .big-slider__slide-foto-4-img
           .big-slider__slide.big-slider__slide-5
             .big-slider__slide-circle
-            img(src="../images/features-slide5.png").big-slider__slide-foto-5
+            img(src="./images/features-slide5.png").big-slider__slide-foto-5
 
         .section3__slider-counter-wrapper
           .section3__min-slider
             .min-slider__slide-1
               .min-slider__icon.min-slider__icon-1
-                img(src="../images/features-icon1.png").min-slider__slide-foto-1
+                img(src="./images/features-icon1.png").min-slider__slide-foto-1
               .min-slider__text
                 | Не требуем генеральной доверенности и договор купли-продажи
             .min-slider__slide-2
               .min-slider__icon.min-slider__icon-2
-                img(src="../images/features-icon2.png").min-slider__slide-foto-2
+                img(src="./images/features-icon2.png").min-slider__slide-foto-2
               .min-slider__text
                 | Пересчет процентов
                 br.min-slider__text
                 | за пользование займом по дням
             .min-slider__slide-3
               .min-slider__icon.min-slider__icon-3
-                img(src="../images/features-icon3.png").min-slider__slide-foto-3
+                img(src="./images/features-icon3.png").min-slider__slide-foto-3
               .min-slider__text
                 | При заключении договора,
                 br.min-slider__text
                 | деньги наличными сразу
             .min-slider__slide-4
               .min-slider__icon.min-slider__icon-4
-                img(src="../images/features-icon3.png").min-slider__slide-foto-4
+                img(src="./images/features-icon3.png").min-slider__slide-foto-4
               .min-slider__text
                 | Высокая лояльность к клиентам
             .min-slider__slide-5
               .min-slider__icon.min-slider__icon-5
-                img(src="../images/features-icon3.png").min-slider__slide-foto-5
+                img(src="./images/features-icon3.png").min-slider__slide-foto-5
               .min-slider__text
                 | Работаем официально, состоим
                 br.min-slider__text
@@ -338,21 +338,21 @@ body
           | Получить займ
         .section7__license-wrapper
           a(href = "./images/license-1.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-1.png")
+            img(src = "images/license-1.png")
           a(href = "./images/license-2.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-2.png")
+            img(src = "images/license-2.png")
           a(href = "./images/license-3.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-3.png")
+            img(src = "images/license-3.png")
           a(href = "./images/license-4.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-4.png")
+            img(src = "images/license-4.png")
           a(href = "./images/license-5.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-5.png")
+            img(src = "images/license-5.png")
           a(href = "./images/license-6.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-6.png")
+            img(src = "images/license-6.png")
           a(href = "./images/license-7.png" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-7.png")
+            img(src = "images/license-7.png")
           a(href = "./images/license-8-b.jpg" rel = "lightbox-group").funcybox-section7
-            img(src = "./images/license-8.png")
+            img(src = "images/license-8.png")
     .section.section8
       .container.section8-container
         .section__title.section8__title
@@ -487,6 +487,14 @@ body
             | © Mollavtolombard 2017
           a(href="#").section10__footer-person-data
             | Обработка персональных данных
+          .social-links
+            a(href="#").social-links__google
+            a(href="#").social-links__mail
+            a(href="#").social-links__facebook
+            a(href="#").social-links__vk
+            a(href="#").social-links__twitter
+          a(href="#").chile
+
         .social-links
           a(href="#").social-links__google
           a(href="#").social-links__mail
@@ -606,7 +614,7 @@ body
           | Благодарим за отзыв!
         .popup__text.popup__success-text.popup__success-text-review
           | Нам очень важна обратная связь клиентов. Ваш отзыв будет опубликован!
-  .popup__slider.hidden
+  .popup__slider
     .overlay
       .popup__container.popup__container-slider
         .popup__btn-close.popup__btn-close-slider
