--- a/app/stylesheets/sections/_section6.scss
+++ b/app/stylesheets/sections/_section6.scss
@@ -165,6 +165,12 @@
   }
 }
 
+@media (max-width: 960px) {
+  .section6 {
+    padding-bottom: 40px;
+  }
+}
+
 @media (max-width: 904px) {
 
   .section6__text {
