--- a/app/stylesheets/sections/_section4.scss
+++ b/app/stylesheets/sections/_section4.scss
@@ -200,10 +200,17 @@
   }
 }
 
+@media (max-width: 960px) {
+  .section4 {
+    padding-bottom: 40px;
+  }
+}
+
 @media (max-width: 834px) {
   .section4__seven {
-    left: -45px;
+    left: 50%;
     top: 200px;
+    transform: translateX(-30%);
   }
 
 
@@ -225,6 +232,10 @@
      padding-top: 40px;
     padding-bottom: 30px;
     padding-right: 20px;
+  }
+
+  .section4__seven {
+    transform: translateX(-50%);
   }
 }
 
@@ -282,7 +293,6 @@
 
   .section4__seven {
     top: 210px;
-    left: -20px;
 
     width: 300px;
     height: 235px;
