--- a/app/stylesheets/tools/_settings.scss
+++ b/app/stylesheets/tools/_settings.scss
@@ -16,6 +16,7 @@ a {
   position: relative;
 
   max-width: 1200px;
+  width: 100%;
   padding: 0 14px;
   margin: 0 auto;
 }
@@ -62,5 +63,12 @@ a {
 @media (max-width: 560px) {
   .container {
     padding: 0 12px;
+  }
+}
+
+@media (max-width: 960px) {
+  .container {
+    //overflow: hidden;
+    padding: 0 18px;
   }
 }
