--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -64,6 +64,8 @@
   border-radius: 5px;
   background: none;
   border: solid 1px #ffffff;
+
+  transition-duration: .2s;
 }
 
 .section1__form-text:focus {
