--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -7,6 +7,8 @@
   z-index: 20;
 
   color: #ffffff;
+
+  transition-duration: .7s;
 }
 
 .main-nav {
@@ -22,6 +24,9 @@
   padding-left: 150px;
 
   box-shadow: -3.5px 3.5px 13.8px 1.2px rgba(0, 0, 0, 0.8);
+
+  transition-duratuion: 4s;
+
 }
 
 .main-nav__blur {
@@ -37,8 +42,12 @@
   padding-top: 145px;
   padding-left: 150px;
 
-  background: rgba(255,255,255,0.5);
+  will-change: auto;
+
+  background: rgba(0,0,0,0.5);
   filter: blur(5px);
+
+  transition: background-color .7s;
 }
 
 .main-nav ul {
@@ -53,6 +62,8 @@
   font-size: 24px;
   line-height: 3;
   color: #ffffff;
+
+  transition-duration: .3s;
 }
 
 .main-nav__link:hover {
@@ -71,6 +82,8 @@
   background-size: contain;
 
   cursor: pointer;
+
+  transition: background-image .7s;
 }
 
 
@@ -93,6 +106,8 @@
 
   background: url('../images/logo-white.png') no-repeat center;
   background-size: contain;
+
+  transition-duration: .7s;
 }
 
 .page-header-wrapper {
@@ -165,6 +180,8 @@
   text-align: left;
 
   text-decoration: underline;
+
+  transition-duration: .7s;
 }
 
 .page-header__tel {
@@ -197,6 +214,8 @@
   color: #ffffff;
 
   text-align: left;
+
+  transition: border .3s, color .7s;
 
   &:hover {
      border: solid 2px #63771e;
