--- a/app/stylesheets/tools/_settings.scss
+++ b/app/stylesheets/tools/_settings.scss
@@ -43,10 +43,26 @@ a {
   outline: none;
 }
 
-.error {
-  border: solid 1px #d24a43;
+label.error {
+  font-size: 12px;
+  display: none;
 }
 
+input.valid {
+  border: solid 1px #accc3d;
+}
+
+input.error {
+   border: solid 1px #d24a43;
+}
+
+textarea.valid {
+  border: solid 1px #accc3d;
+}
+
+textarea.error {
+   border: solid 1px #d24a43;
+}
 
 @media (max-width: 1230px) {
   .container {
