--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -559,7 +559,7 @@ body
                 | Ваши данные не будут переданы третьим лицам
           button(type="submit")(href="#").btn.popup__btn
             | Задать вопрос
-  .popup__review
+  .popup__review.hidden
     .overlay
       .popup__container
         .popup__btn-close.popup__btn-close-review
