--- a/app/stylesheets/sections/_section6.scss
+++ b/app/stylesheets/sections/_section6.scss
@@ -94,6 +94,28 @@
   background-size: contain;
 }
 
+@media (max-width: 1440px) {
+  .section6__title {
+    margin-bottom: 60px;
+
+    &::after {
+      bottom: -29px;
+    }
+  }
+
+  .section6__text {
+    margin-bottom: 47px;
+  }
+
+  .section6__content-block {
+    margin-bottom: 41px;
+  }
+
+  .section__passport-icon {
+    margin-bottom: 25px;
+  }
+}
+
 @media (max-width: 1368px) {
   .section6__title {
     margin-bottom: 20px;
