--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -10,7 +10,7 @@ head
 body
   header.page-header
     .page-header__logo-wrapper
-      a(href="#").page-header__logo
+      a(href="#").page-header__logo.page-header__logo-bg
     .page-header__location-time-wrapper
       .page-header__location
         span
