--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -99,6 +99,7 @@
 }
 
 .page-header__logo {
+  position: relative;
   display: inline-block;
   width: 188px;
   height: 41px;
@@ -107,7 +108,8 @@
   background: url('../images/logo-white.png') no-repeat center;
   background-size: contain;
 
-  transition-duration: .7s;
+  transition: background-image .7s;
+
 }
 
 .page-header-wrapper {
