--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -287,8 +287,9 @@ span.checkbox__yes {
   }
 
   span.checkbox__yes {
-    top: -3px;
+    top: -1px;
     left: 4px;
+    font-size: 11px;
   }
 
   .checkbox-wrapper {
